# asiafilings-monorepo

./: .gitignore  =1.24.0  AGENTS.md  CLAUDE.md  package-lock.json  package.json  plan.md
apps/data-pipeline/: .env.development.defaults  .env.production.defaults  Makefile  README.md  manifest.csv  manifest_hkex_00001.csv  manifest_hkex_00002.csv  project.json  pyproject.toml
apps/data-pipeline/etl_worker/: Dockerfile  Dockerfile.ocr  preload.py  requirements-ocr.txt  requirements.txt
apps/data-pipeline/etl_worker/src/: __init__.py  db_utils.py  dynamo_utils.py  extractor.py  main.py  ocr_queue.py  ocr_worker.py  s3_utils.py
apps/data-pipeline/etl_worker/tests/: test_ocr_worker.py
apps/data-pipeline/infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
apps/data-pipeline/infra/modules/batch/: main.tf
apps/data-pipeline/infra/modules/dynamodb/: main.tf
apps/data-pipeline/infra/modules/ocr_worker/: main.tf
apps/data-pipeline/infra/modules/quickwit/: main.tf
apps/data-pipeline/infra/modules/quickwit/lambda/: ingest.py
apps/data-pipeline/infra/modules/s3/: main.tf
apps/data-pipeline/scripts/: backfill_dedup.py  backfill_quickwit.py  find_gibberish.py  generate_manifest.py  quickwit_cluster.sh  trigger_batch.py
apps/data-pipeline/search_config/: quickwit.yaml  source.yaml
apps/serverless-functions/: .dockerignore  .env.development.defaults  .env.example  .env.production.defaults  .gitignore  Makefile  README.md  go.mod  go.sum  project.json
apps/web-platform/: .env.development.defaults  .env.example  .env.production.defaults  .gitignore  (+14 more)
(+186 files in other folders)
